[project]
name = "nhm-deepagents"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.6.2",
    "dynaconf>=3.2.13",
    "fastapi>=0.136.3",
    "langchain-ollama>=1.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.uv.sources]
[[tool.uv.index]]
url = "https://pypi.python.org/simple/"
default = true

[tool.black]
line_length = 120

[tool.isort]
profile = "black"
src_paths = ["src"]
py_version = 314
skip_gitignore = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["tomorrow", "rainy"]
multi_line_output = 3
line_length = 120

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/tomorrow", "tests/rainy"]
python_files = ["*.py"]

[tool.coverage.run]
branch = true
concurrency = [
    "thread",
]
data_file = ".coverage"
disable_warnings = []
source = [
    "src/tomorrow",
    "src/rainy",
]
omit = [
    "tests/*",
]
relative_files = true

[tool.coverage.report]
exclude_also = []
format = "text"
sort = "Name"
ignore_errors = true

[tool.coverage.html]
directory = "coverage"

[tool.coverage.json]
output = ".coverage.json"
pretty_print = true

[tool.coverage.xml]
output = ".coverage.xml"
