[project]
name = "nhm-deepagents"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "deepagents>=0.6.2",
    "fastapi>=0.136.3",
    "httpx2>=2.4.0",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli[inmem]>=0.4.31",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff==0.15.16",
    "tox>=4.24.2",
]

[tool.uv.sources]
[[tool.uv.index]]
url = "https://pypi.python.org/simple/"
default = true

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
]
ignore = [
    "E731",
    "UP031",
    "SIM108",
    "SIM117",
    "SIM202",
    "UP007",
    "UP045",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["tomorrow", "rainy"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/tomorrow", "tests/rainy"]
python_files = ["*.py"]

[tool.coverage.run]
branch = true
concurrency = [
    "thread",
]
data_file = ".coverage"
disable_warnings = []
source = [
    "src/tomorrow",
    "src/rainy",
]
omit = [
    "tests/*",
]
relative_files = true

[tool.coverage.report]
exclude_also = []
format = "text"
sort = "Name"
ignore_errors = true

[tool.coverage.html]
directory = "coverage"

[tool.coverage.json]
output = ".coverage.json"
pretty_print = true

[tool.coverage.xml]
output = ".coverage.xml"

[tool.tox]
env_list = ["py314"]
requires = ["tox-uv"]
uv_python_preference = "system"

[tool.tox.env_run_base]
description = "Run tests with coverage"
dependency_groups = ["dev"]
pass_env = ["COVERAGE_FILE", "TOMORROW_APP", "RAINY_APP", "TOMORROW_SETTINGS_MODULE", "RAINY_SETTINGS_MODULE"]
set_env = { PYTHONPATH = "{toxinidir}/src" }
allowlist_externals = ["uv"]
commands = [
    ["coverage", "run", "--rcfile={toxinidir}/pyproject.toml", "-m", "pytest"]
]
